웹페이지 바탕화면 컬러 변경하기

--- a/index.html
+++ b/index.html
@@ -7,5 +7,27 @@
     <script defer src="main.js"></script>
     <!-- async와 defer를 구분하자.. -->
   </head>
-  <body></body>
+  <body>
+    <h1><a href="www.naver.com">Go to Naver</a></h1>
+    <input type="button" value="Night" onclick="
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+   
+    ">
+    <input type="button" value="Day" onclick="
+    document.querySelector('body').style.backgroundColor = 'yellow';
+    document.querySelector('body').style.color = 'black';
+    ">
+    
+    <ol class:tag1>
+      <li><a href="">Naver Searching</a></li>
+      <li><a href="">Naver Cafe</a></li>
+      <li><a href="">Naver Blog</a></li>
+    </ol>
+    <h2>JavaScript</h2>
+
+
+
+
+  </body>
 </html>
