--- a/index.html
+++ b/index.html
@@ -18,7 +18,23 @@
     document.querySelector('body').style.backgroundColor = 'yellow';
     document.querySelector('body').style.color = 'black';
     ">
+    <input type="button" value="night" onclick="
+    if(document.querySelector('body').dataset.mode === 'day'){
+      document.querySelector('body').style.backgroundColor = 'black';
+      document.querySelector('body').style.color = 'white';
+      document.querySelector('body').dataset.mode = 'night';
+      this.value = 'day'
+    } else {
+      document.querySelector('body').style.backgroundColor = 'white';
+      document.querySelector('body').style.color = 'black';
+      document.querySelector('body').dataset.mode = 'day';
+      this.value = 'night'
+
+    }
     
+    ">
+
+
     <ol class:tag1>
       <li><a href="">Naver Searching</a></li>
       <li><a href="">Naver Cafe</a></li>
