--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
     <!-- async와 defer를 구분하자.. -->
   </head>
   <body>
-    <h1><a href="www.naver.com">Go to Naver</a></h1>
+    <h1><a href="https:\\www.naver.com">Go to Naver</a></h1>
+    
     <input type="button" value="Night" onclick="
-    document.querySelector('body').style.backgroundColor = 'black';
-    document.querySelector('body').style.color = 'white';
+    var target = document.querySelector('body')
+    target.style.backgroundColor = 'black';
+    target.style.color = 'white';
    
     ">
     <input type="button" value="Day" onclick="
-    document.querySelector('body').style.backgroundColor = 'yellow';
-    document.querySelector('body').style.color = 'black';
+    var target = document.querySelector('body')
+    target.style.backgroundColor = 'yellow';
+    target.style.color = 'black';
     ">
     <input type="button" value="night" onclick="
-    if(document.querySelector('body').dataset.mode === 'day'){
-      document.querySelector('body').style.backgroundColor = 'black';
-      document.querySelector('body').style.color = 'white';
-      document.querySelector('body').dataset.mode = 'night';
+    var target = document.querySelector('body')
+    if(this.value === 'night'){
+      target.style.backgroundColor = 'black';
+      target.style.color = 'white';
       this.value = 'day'
     } else {
-      document.querySelector('body').style.backgroundColor = 'white';
-      document.querySelector('body').style.color = 'black';
-      document.querySelector('body').dataset.mode = 'day';
+      target.style.backgroundColor = 'white';
+      target.style.color = 'black';
       this.value = 'night'
-
     }
-    
     ">
 
 
