todo list 편집 수정

--- a/clock.html
+++ b/clock.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
     <link rel="stylesheet" href="clock.css">
+    <link
+    href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
+    rel="stylesheet"
+    />
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@661&display=swap" rel="stylesheet"> -->
+
 </head>
 <body>
     <div class="js-clock">
@@ -22,11 +29,11 @@
  
     <ul class="js-toDoList"></ul>
  
-    <video id="video1" width="400" height="300" controls>
+    <!-- <video id="video1" width="400" height="300" controls>
         <source src="./picture/윤아윤지주전.mp4" type="video/mp4">
 
       Your browser does not support the video tag.
-      </video>
+      </video> -->
     
 
     <script src="clock.js"></script>
