--- a/myToDos.html
+++ b/myToDos.html
@@ -5,15 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clock</title>
     <link rel="stylesheet" href="clock.css">
-    <link
-    href="https://fonts.googleapis.com/css2?family=Single+Day&display=swap"
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap"
-    rel="stylesheet"
-    />
-    <!-- <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@661&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
+    <script src="https://kit.fontawesome.com/bbf981ac49.js"
+      crossorigin="anonymous"
+    ></script>
 
 </head>
 <body>
+
+    <div class="weather_logo">
+        <i class="fas fa-cloud-sun"></i>
+        <span class="js-weather"></span>
+
     <div class="js-clock">
         <h1>00:00</h1>
     </div>
@@ -28,8 +32,7 @@
     </form>
  
     <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
-
+   
     <!-- <video id="video1" width="400" height="300" controls>
         <source src="./picture/윤아윤지주전.mp4" type="video/mp4">
 
